--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "daisyui": "^2.28.0",
     "dotenv": "^16.0.2",
-    "firebase": "^9.10.0",
-    "next": "12.3.0",
+    "firebase": "^9.21.0",
+    "next": "^12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
@@ -29,5 +29,17 @@
     "eslint-config-next": "12.3.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
-  }
+  },
+  "description": "This is a premade template from developing realtime games using the amazing realtime DB from firebase. Games such as **Blooket** and **GimKit** also use this same stack to develop thir games.",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Developer-Doge/Realtime-Game.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Developer-Doge/Realtime-Game/issues"
+  },
+  "homepage": "https://github.com/Developer-Doge/Realtime-Game#readme"
 }
