--- a/global/firebase.env
+++ b/global/firebase.env
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyDNJwpmHi-05KSaW5l2FlQmShjroIeLRF4"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="ultimate-dares.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_DATABASE_URL="https://ultimate-dares-default-rtdb.firebaseio.com"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="ultimate-dares"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="ultimate-dares.appspot.com"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="538463798937"
-NEXT_PUBLIC_FIREBASE_APP_ID="1:538463798937:web:0944e35c9b1d55a8665a08"
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyBn8nH3yD7tHrUd6baYjvFGme5TvVWulJE"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="bamkit-app.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_DATABASE_URL="https://bamkit-app-default-rtdb.firebaseio.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="bamkit-app"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="bamkit-app.appspot.com"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="995320409870"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:995320409870:web:ddea3f2a45d1daa24a715f"
